<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Edge Expenses</string>
    <string name="action_settings">Settings</string>
    <string name="action_masssage">Read Massage</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_first_page">You will be able to keep track of your expenses all the time! Take a quick look at your expenses by day, week and month!</string>
    <string name="second_page_desc">Take advantage of the statistics to identify where you can save money</string>
    <string name="third_page_desc">Set reminders to alert you when your due dates are close.</string>
    <string name="money_desc">money_icon</string>
    <string name="credit_card_content_desc">credit card icon</string>
    <string name="saving_money_content_desc">saving money icon</string>
    <string name="account">Account</string>
    <string name="expenses">Expense</string>
    <string name="income">Income</string>
    <string name="categories">Categories</string>
    <string name="income_categories">Income Categories</string>
    <string name="expense_categories">Expense Categories</string>
    <string name="statistics">Statistics</string>
    <string name="reminders">Reminders</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">"Are you sure you want to delete "</string>
    <string name="save">Save</string>
    <string name="create_category">Create a Category</string>
    <string name="cancel">Cancel</string>
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="error_total">Please enter a total</string>
    <string name="description">Description</string>
    <string name="add_new_expense">Add new Expense</string>
    <string name="optional_description">Description (Optional)</string>
    <string name="total">Available</string>
    <string name="confirm_delete_items">Are you sure to delete this item(s)</string>
    <string name="confirm_delete_expense">Are you sure you want to delete this expense?</string>
    <string name="expense_prefix">- <xliff:g example="100.00" id="amount">%s</xliff:g></string>
    <string name="income_prefix">+ <xliff:g example="100.00" id="amount">%s</xliff:g></string>
    <string name="country_currency">Country Currency</string>
    <string name="pref_country_key">country_key</string>
    <string name="default_country">IN</string>
    <string name="title_activity_expense_detail">ExpenseDetailActivity</string>
    <string name="tv_title_transition">tvTotalTransition</string>
    <string name="date_placeholder">date placeholder</string>
    <string name="to_date">Date to</string>
    <string name="date_from">Date from</string>
    <string name="categories_percentage">Categories Percentage</string>
    <string name="total_expenses_per_category">Total Expenses per category</string>
    <string name="Save">Save</string>
    <string name="hour_format"><xliff:g example="09" id="hour">%02d</xliff:g>:<xliff:g example="09" id="minute">%02d</xliff:g></string>
    <string name="reminder_name_validation">Please fill a name for the reminder</string>
    <string name="pick_day_of_month">Pick a day of the month</string>
    <string name="confirm_reminder_delete">Are you sure you want to delete this reminder?</string>
    <string name="this_week">This week</string>
    <string name="reminder_name_hint">Ex. Company Credit Card</string>
    <string name="reminder_schedule_title">The alarm is schedule for (day of the month):</string>
    <string name="reminder_time_sent_title">It will be sent at: (Time of the day)</string>
    <string name="reminder_help">Create a reminder to help you set a notification for a day in every month to remember when your debts are due.\n A notification will be shown when the time is right. \nRemember you can turn them off anytime you like.</string>
    <string name="create_a_reminder">Create a Reminder</string>
    <string name="edit_a_reminder">Edit a reminder</string>
    <string name="expense_detail">Expense Detail</string>
    <string name="same_category_this_week">Same Category This Week</string>
    <string name="already_accepted_user_key" translatable="false">already_accepted_user</string>
    <string name="start_using_expense">Start using Edge Expenses</string>
    <string name="reminders_empty">There are no reminders. Create them to remember important dates</string>
    <string name="categories_empty">There are no categories yet. Start by creating some and be able to take advantage of the statistics.</string>
    <string name="no_chart_data">No data available</string>
    <string name="no_categories_error">Please create categories to start saving expenses</string>
    <string name="today_expenses_total">Today: %s</string>
    <string name="no_expenses_today">No expenses today</string>
    <string name="start">Start</string>
    <string name="hint_category">Eg. Food</string>
    <string name="error_name">Please enter a name</string>
    <string name="pick_dates">Pick a range of dates</string>
    <string name="edit_category">Edit category</string>
    <string name="history">History</string>
    <string name="action_help">Help</string>
    <string-array name="reminder_days_available">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
    </string-array>
    <string name="zero"><b>0</b></string>
    <string name="one"><b>1</b></string>
    <string name="two"><b>2</b></string>
    <string name="three"><b>3</b></string>
    <string name="four"><b>4</b></string>
    <string name="five"><b>5</b></string>
    <string name="six"><b>6</b></string>
    <string name="seven"><b>7</b></string>
    <string name="eight"><b>8</b></string>
    <string name="nine"><b>9</b></string>
    <string name="done"><b>Done</b></string>
    <string name="deletee"><b>\u00AB</b></string>
    <string name="divide"><b>\u00F7</b></string>
    <string name="multiply"><b>\u2715</b></string>
    <string name="plus"><b>\u002B</b></string>
    <string name="minus"><b>\u2212</b></string>
    <string name="equals"><b>\u003D</b></string>
</resources>