<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_settings_black"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_massage"
        android:icon="@drawable/ic_settings_black"
        android:orderInCategory="100"
        android:title="@string/action_masssage"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/action_help"
        android:visible="false"
        app:showAsAction="never" />

    <item
        android:id="@+id/nav_history"
        android:icon="@drawable/ic_today_black_24dp"
        android:orderInCategory="100"
        android:title="@string/history"
        android:visible="false"
        app:showAsAction="never" />
</menu>
