<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/dimen_10dp"
    android:gravity="center"
    android:orientation="vertical"
    card_view:cardBackgroundColor="@color/white"
    card_view:cardCornerRadius="@dimen/corner_dp"
    card_view:cardElevation="@dimen/elevation_dp"
    card_view:cardPreventCornerOverlap="false"
    card_view:cardUseCompatPadding="true">

    <android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:padding="@dimen/dimen_10dp"
        app:columnCount="2">

        <TextView
            android:id="@+id/tv_help"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_marginBottom="@dimen/dimen_5dp"
            android:gravity="center"
            android:text="@string/pick_dates"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal" />

        <TextView
            android:id="@+id/tv_title_date_from"
            style="@style/HeaderTextView"
            android:layout_marginBottom="@dimen/dimen_10dp"
            android:gravity="center"
            android:text="@string/date_from"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/btn_date_from"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/date_placeholder"
            android:textColor="@color/primary_dark"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <TextView
            android:id="@+id/tv_title_date_to"
            style="@style/HeaderTextView"
            android:gravity="center"
            android:text="@string/to_date"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <Button
            android:id="@+id/btn_date_to"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/date_placeholder"
            android:textColor="@color/primary_dark"
            app:layout_columnWeight="1"
            app:layout_gravity="fill_horizontal" />

        <TextView
            android:id="@+id/tv_total"
            style="@style/HeaderTextView"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:gravity="center"
            android:text="@string/total"
            android:textSize="@dimen/text_size_24"
            app:layout_columnSpan="2"
            app:layout_gravity="fill_horizontal" />

    </android.support.v7.widget.GridLayout>
</android.support.v7.widget.CardView>